get land and docker basic configuration
