# src/static/openapi.yaml
@@ -3,11 +3,30 @@ info:
   title: Mapisto API
   version: "0.1"
 servers:
+  - url: http://api.mapisto.org
+  - url: 'http://localhost:8080'
   - url: 'http://localhost:5000'
 tags:
   - name: State
     description: "Read and manage states data"
+  - name : Land
+    description: "Get land coordinates to draw the map"
 paths:
+  /land:
+    get:
+      tags:
+        - Land
+      summary : Returns all lands shapes on the world map
+      responses:
+        "200":
+          description: All land shapes were returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items :
+                  type: string
+                  example : 'M150 0 L75 200 L225 200 Z'
   /state:
     get:
       tags:
